--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <br>
     <!-- about -->
     <div class="disdis">
-        <div> 
+        <div>
             <video width="670" controls poster="./public/img/about.jpg"
                 src="./public/video/COSTA RICA IN 4K 60fps HDR (ULTRA HD).mp4"></video>
-            
+
         </div>
 
 
         <div>
-            <h1>Eun ipsam Lorem  <B> ipsum dolor sit amet consectetur </B></h1>
+            <h1>Eun ipsam Lorem <B> ipsum dolor sit amet consectetur </B></h1>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae atque similique. Lorem ipsum dolor
                 sit amet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, officiis.</p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae atque similique. Lorem ipsum dolor
@@ -131,7 +131,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, delectus?</p>
                 </div>
             </div>
-            <div  class="d-flex gap-2">
+            <div class="d-flex gap-2">
                 <div>
                     <i class="bi bi-check2-all text-warning"></i>
                 </div>
@@ -153,6 +153,43 @@
 
     </div>
 
+
+    <!-- about 2 -->
+
+    <div class="leabout">
+        <div class="leaboutmin1">
+            <h2>Why Choose</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit molestiae placeat magni id fuga hic
+                Lorem ipsum dolor sit amet.</p>
+
+        </div>
+        <div class="leabb">
+            <div class=" lili">
+                <h1>01</h1>
+                <h4>Lorem Ipsum</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
+                    amet</p>
+            </div>
+            <div  class=" lili">
+                <h1>02</h1>
+                <h4>Lorem Ipsum</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
+                    amet</p>
+            </div>
+            <div  class=" lili">
+                <h1>03</h1>
+                <h4>Lorem Ipsum</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
+                    amet</p>
+            </div>
+
+
+
+        </div>
+
+
+
+    </div>
 
 
 
