--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <a class="text-warning" href="">Home</a>
             </div>
-            <div><a href="">About</a></div>
+            <div><a href="#disdis">About</a></div>
             <div><a href="">Menu</a></div>
             <div><a href="">Specials</a></div>
             <div><a href="">Events</a></div>
@@ -101,7 +101,7 @@
     </div>
     <br>
     <!-- about -->
-    <div class="disdis">
+    <div id="disdis">
         <div>
             <video width="670" controls poster="./public/img/about.jpg"
                 src="./public/video/COSTA RICA IN 4K 60fps HDR (ULTRA HD).mp4"></video>
