--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active image-container">
-                    <img src="./public/img/slide/slide-1.jpg" class="d-block w-100" alt="...">
+                    <img src="./public/img/slide/slide-1.jpg" class="d-block w-100 " alt="...">
                     <div class="overlay-text">
                         <h1>Delicious Restaurant </h1>
                         <br>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./public/img/slide/slide-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./public/img/slide/slide-2.jpg" class="d-block w-100 " alt="...">
                     <div class="overlay-text">
                         <h1>Lorem psum Dolor </h1>
                         <br>
@@ -170,13 +170,13 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
                     amet</p>
             </div>
-            <div  class=" lili">
+            <div class=" lili">
                 <h1>02</h1>
                 <h4>Lorem Ipsum</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
                     amet</p>
             </div>
-            <div  class=" lili">
+            <div class=" lili">
                 <h1>03</h1>
                 <h4>Lorem Ipsum</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum quos eaque Lorem ipsum dolor sit
@@ -190,6 +190,224 @@
 
 
     </div>
+
+
+
+    <!-- Events -->
+    <section>
+        <h2 class="text-white">Organize Your <span>Events </span>in our Restaurant</h2>
+
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+                    <div class="get">
+                        <div>
+                            <img src="./public/img/event-birthday.jpg" class="d-block " alt="..." width="550">
+                        </div>
+                        <div class="space">
+                            <div>
+                                <h4 class="text-warning">Birthday Parties</h4>
+                                <h1 class="text-white bord d-inline-block">$189</h1>
+                                <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Adipisci, nemo esse reprehenderit sit recusandae voluptas!Adipisci, nemo esse
+                                    reprehenderit sit recusandae voluptas!</p>
+                            </div>
+                            <div class="icon">
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                            </div>
+
+
+                            <div>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                                    non odit autem ipsam fugit iure facere. Excepturi, fuga maiores nihil pariatur
+                                    sapiente iste fugit iusto exercitationem, quisquam aut et ea.</p>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+                    <div class="get">
+                        <div>
+                            <img src="./public/img/event-private.jpg" class="d-block" alt="..." width="550">
+                        </div>
+                        <div class="space">
+                            <div>
+                                <h4 class="text-warning">Private Parties</h4>
+                                <h1 class="text-white bord d-inline-block">$290</h1>
+                                <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Adipisci, nemo esse reprehenderit sit recusandae voluptas!Adipisci, nemo esse
+                                    reprehenderit sit recusandae voluptas!</p>
+                            </div>
+                            <div class="icon">
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                            </div>
+
+
+                            <div>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                                    non odit autem ipsam fugit iure facere. Excepturi, fuga maiores nihil pariatur
+                                    sapiente iste fugit iusto exercitationem, quisquam aut et ea.</p>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+                    <div class="get">
+                        <div>
+                            <img src="./public/img/event-custom.jpg" class="d-block " alt="..." width="550">
+                        </div>
+                        <div class="space">
+                            <div>
+                                <h4 class="text-warning">Custom Parties</h4>
+                                <h1 class="text-white bord d-inline-block">$99</h1>
+                                <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Adipisci, nemo esse reprehenderit sit recusandae voluptas!Adipisci, nemo esse
+                                    reprehenderit sit recusandae voluptas!</p>
+                            </div>
+                            <div class="icon">
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex ">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                                <div class="d-flex">
+                                    <div class="text-warning"><i class="bi bi-check-circle"></i></div>
+                                    <div class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perspiciatis cumque quam ex, suscipit a vitae!</div>
+
+                                </div>
+                            </div>
+
+
+                            <div>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                                    non odit autem ipsam fugit iure facere. Excepturi, fuga maiores nihil pariatur
+                                    sapiente iste fugit iusto exercitationem, quisquam aut et ea.</p>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="carousel-indicators ">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+        </div>
+    </section>
+
+
+
+    <h3 class="sip">Book a <span>Table</span></h3>
+    <p class="sipp">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+
+    <div class="inputclass">
+
+
+
+
+        <form action="">
+            <div class="inp1">
+
+                <input type="text" id="fname" name="fname" placeholder="Your Name" value=""><br>
+
+                <input type="text" id="fname" name="fname" placeholder=" Your Email" value=""><br>
+
+                <input type="text" id="fname" name="fname" placeholder=" Your Phone" value=""><br>
+
+                <input type="text" id="fname" name="fname" placeholder=" Date" value=""><br>
+
+                <input type="text" id="fname" name="fname" placeholder=" Time " value=""><br>
+
+                <input type="text" id="fname" name="fname" placeholder=" # of people" value=""><br>
+
+
+
+
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+            <textarea name="" id="" placeholder="Message"></textarea>
+
+
+            <div class="inin2">
+                <button>Send Message</button>
+            </div>
+
+
+        </form>
+
+    </div>
+
+
+
 
 
 
