--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div><a href="#disdis">About</a></div>
             <div><a href="">Menu</a></div>
             <div><a href="">Specials</a></div>
-            <div><a href="">Events</a></div>
+            <div><a href="#mmp">Events</a></div>
             <div><a href="">Chefs</a></div>
-            <div><a href="">Gallery</a></div>
+            <div><a href="#gall3">Gallery</a></div>
             <div><a href="">Contact</a></div>
             <div><button>Book a table</button></div>
         </div>
@@ -194,7 +194,7 @@
 
 
     <!-- Events -->
-    <section>
+    <section id="mmp">
         <h2 class="text-white">Organize Your <span>Events </span>in our Restaurant</h2>
 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -355,7 +355,8 @@
 
 
     <h3 class="sip">Book a <span>Table</span></h3>
-    <p class="sipp">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+    <p class="sipp">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque
+        vitae autem.</p>
 
     <div class="inputclass">
 
@@ -406,11 +407,35 @@
 
     </div>
 
+    <!-- Gallery -->
+<div id="gall3">
+    <div class="Gal1">
+        <h2>Some photos from <span>Our Restaurant </span></h2>
+    </div>
+    <div class="Gal2">
+        <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae
+            autem.</p>
+    </div>
+
+    <div class="allgal">
+        <div class="gallerys1">
+            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-1.jpg" alt=""></div>
+            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-2.jpg" alt=""></div>
+            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-3.jpg" alt=""></div>
+            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-4.jpg" alt=""></div>
+        </div>
+
+        <div class="gallerys1">
+            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-5.jpg" alt=""></div>
+            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-6.jpg" alt=""></div>
+            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-7.jpg" alt=""></div>
+            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-8.jpg" alt=""></div>
+        </div>
+
+    </div>
 
 
-
-
-
+</div>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
