--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div><a href="#mmp">Events</a></div>
             <div><a href="">Chefs</a></div>
             <div><a href="#gall3">Gallery</a></div>
-            <div><a href="">Contact</a></div>
+            <div><a href="#contacttype">Contact</a></div>
             <div><button>Book a table</button></div>
         </div>
     </nav>
@@ -408,35 +408,134 @@
     </div>
 
     <!-- Gallery -->
-<div id="gall3">
-    <div class="Gal1">
-        <h2>Some photos from <span>Our Restaurant </span></h2>
+    <div id="gall3">
+        <div class="Gal1">
+            <h2>Some photos from <span>Our Restaurant </span></h2>
+        </div>
+        <div class="Gal2">
+            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque
+                vitae
+                autem.</p>
+        </div>
+
+        <div class="allgal">
+            <div class="gallerys1">
+                <div class="ggll"><img width="320" src="./public/img/gallery/gallery-1.jpg" alt=""></div>
+                <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-2.jpg" alt=""></div>
+                <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-3.jpg" alt=""></div>
+                <div class="ggll"><img width="320" src="./public/img/gallery/gallery-4.jpg" alt=""></div>
+            </div>
+
+            <div class="gallerys1">
+                <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-5.jpg" alt=""></div>
+                <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-6.jpg" alt=""></div>
+                <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-7.jpg" alt=""></div>
+                <div class="ggll"><img width="320" src="./public/img/gallery/gallery-8.jpg" alt=""></div>
+            </div>
+
+        </div>
+
+
     </div>
-    <div class="Gal2">
+
+
+
+
+    <!-- Contact -->
+
+
+
+    <div id="contacttype">
+
+        <h3>Contact <span>Us</span></h3>
         <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae
             autem.</p>
+
+        <div class="map">
+            <iframe style="border:0; width: 100%; height: 350px;"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                frameborder="0" allowfullscreen=""></iframe>
+        </div>
     </div>
 
-    <div class="allgal">
-        <div class="gallerys1">
-            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-1.jpg" alt=""></div>
-            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-2.jpg" alt=""></div>
-            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-3.jpg" alt=""></div>
-            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-4.jpg" alt=""></div>
+<div class="mgrand">
+    <div class="grand">
+        <div class="lighncontact">
+            <div class="copy">
+                <div>
+                    <i class="bi bi-geo-alt"></i>
+                </div>
+
+                <div>
+                    <h4>Location :</h4>
+                    <p>A108 Adam Street</p>
+                    <p> New York, NY 535022</p>
+                </div>
+
+
+
+            </div>
+
+            <div  class="copy">
+
+                <div>
+                    <i class="bi bi-clock-history"></i>
+                </div>
+
+                <div>
+                    <h4>Open Hour :</h4>
+                    <p>Monday-Saturday:</p>
+                    <p> 11:00 AM - 2300 PM</p>
+                </div>
+
+            </div>
+
+            <div  class="copy">
+                <div>
+                    <i class="bi bi-envelope"></i>
+                </div>
+
+                <div>
+                    <h4>Email :</h4>
+                    <p>info@example.com</p>
+                    <p> contact@example.com</p>
+                </div>
+
+            </div>
+
+            <div  class="copy">
+                <div>
+                    <i class="bi bi-phone"></i>
+                </div>
+
+                <div>
+                    <h4>Call :</h4>
+                    <p>+1 5589 55488 51</p>
+                    <p>+1 5589 22475 14</p>
+                </div>
+
+            </div>
+
+
+
+
+
         </div>
 
-        <div class="gallerys1">
-            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-5.jpg" alt=""></div>
-            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-6.jpg" alt=""></div>
-            <div class="ggll"> <img width="320" src="./public/img/gallery/gallery-7.jpg" alt=""></div>
-            <div class="ggll"><img width="320" src="./public/img/gallery/gallery-8.jpg" alt=""></div>
+
+
+
+
+        <div>
+
+
+
         </div>
+
 
     </div>
-
 
 </div>
-
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
