--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
     </div>
 
-<div class="mgrand">
+
     <div class="grand">
         <div class="lighncontact">
             <div class="copy">
@@ -476,7 +476,7 @@
 
             </div>
 
-            <div  class="copy">
+            <div class="copy">
 
                 <div>
                     <i class="bi bi-clock-history"></i>
@@ -490,7 +490,7 @@
 
             </div>
 
-            <div  class="copy">
+            <div class="copy">
                 <div>
                     <i class="bi bi-envelope"></i>
                 </div>
@@ -503,7 +503,7 @@
 
             </div>
 
-            <div  class="copy">
+            <div class="copy">
                 <div>
                     <i class="bi bi-phone"></i>
                 </div>
@@ -526,16 +526,55 @@
 
 
 
-        <div>
+        <div class="full2">
+
+
+            <form action="fullfi">
+                <div class="formf">
+
+                    <input type="text" id="fname" name="fname" placeholder="Your Name" value=""><br>
+
+                    <input type="text" id="fname" name="fname" placeholder=" Your Email" value=""><br>
+
+                </div>
+
+                <div>
+
+                    <input class="inputinput" type="text" id="fname" name="fname" placeholder="Subject" value=""><br>
+                </div>
 
 
 
+
+
+
+
+                <div>
+
+
+                    <textarea name="" id="" placeholder="Message"></textarea>
+                </div>
+
+                <div class=" buttbut">
+                    <button>Send Message</button>
+                </div>
+
+            </form>
         </div>
+
+
+
+
+       
+
 
 
     </div>
 
-</div>
+
+    </div>
+
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
