--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         <div class="full2">
 
 
-            <form action="fullfi">
+            <form class="fullfi">
                 <div class="formf">
 
                     <input type="text" id="fname" name="fname" placeholder="Your Name" value=""><br>
@@ -565,14 +565,44 @@
 
 
 
-       
 
 
-
-    </div>
 
 
     </div>
+
+
+    <footer>
+
+        <div>
+            <h1>Delicious</h1>
+        </div>
+        <div>
+            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi
+                placeat.</p>
+        </div>
+        <div class="d2">
+            <div class="d1" ><i class="bi bi-twitter"></i></div>
+            <div class="d1" ><i class="bi bi-facebook"></i></div>
+            <div class="d1" ><i class="bi bi-instagram"></i></div>
+            <div class="d1" ><i class="bi bi-skype"></i></div>
+            <div class="d1" ><i class="bi bi-linkedin"></i></div>
+
+
+
+        </div>
+        <div class="f3">
+            <p>© Copyright Delicious. All Rights Reserved</p>
+              <p>  Designed by <span> BootstrapMade </span></p>
+        </div>
+
+
+
+    </footer>
+
+
+
+
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
