--- a/index.html
+++ b/index.html
@@ -438,6 +438,90 @@
 
     </div>
 
+    <!-- CHeffs -->
+
+    <div class="chefs py-5 cheffs">
+        <h3 class="d-flex justify-content-center">Our Proffesional &nbsp;<div class="text-warning"> chefs</div>
+        </h3>
+        <p class="d-flex justify-content-center">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
+            adipisci expedita at voluptas
+            atque vitae autem.</p>
+        <div class="d-flex justify-content-around w-100">
+            <div class="d-flex flex-column position-relative">
+                <div class="">
+                    <img width="350px" src="./public/img/chefs/chefs-1.jpg" alt="">
+                </div>
+                <div class="position-absolute top-100 start-50 translate-middle bg-white px-5 w-75 py-3">
+
+                    <h5 class="d-flex justify-content-center text-secondary">Walter White</h5>
+                    <p class="d-flex justify-content-center text-secondary">Master Chef</p>
+                    <div class="d-flex justify-content-center gap-3">
+                        <div class="text-secondary">
+                            <i class="bi bi-twitter"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-facebook"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-instagram"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-column position-relative">
+                <div class="">
+                    <img width="350px" src="./public/img/chefs/chefs-2.jpg" alt="">
+                </div>
+                <div class="position-absolute top-100 start-50 translate-middle bg-white px-5 w-75 py-3">
+
+                    <h5 class="d-flex justify-content-center text-secondary">Sarah Jhonson</h5>
+                    <p class="d-flex justify-content-center text-secondary">Patissier</p>
+                    <div class="d-flex justify-content-center gap-3">
+                        <div class="text-secondary">
+                            <i class="bi bi-twitter"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-facebook"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-instagram"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-column position-relative">
+                <div class="">
+                    <img width="350px" src="./public/img/chefs/chefs-3.jpg" alt="">
+                </div>
+                <div class="position-absolute top-100 start-50 translate-middle bg-white px-5 w-75 py-3">
+
+                    <h5 class="d-flex justify-content-center text-secondary">William Anderson</h5>
+                    <p class="d-flex justify-content-center text-secondary">cook</p>
+                    <div class="d-flex justify-content-center gap-3">
+                        <div class="text-secondary">
+                            <i class="bi bi-twitter"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-facebook"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-instagram"></i>
+                        </div>
+                        <div class="text-secondary">
+                            <i class="bi bi-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
@@ -571,7 +655,7 @@
 
     </div>
 
-
+    <!-- Footer -->
     <footer>
 
         <div>
@@ -582,18 +666,18 @@
                 placeat.</p>
         </div>
         <div class="d2">
-            <div class="d1" ><i class="bi bi-twitter"></i></div>
-            <div class="d1" ><i class="bi bi-facebook"></i></div>
-            <div class="d1" ><i class="bi bi-instagram"></i></div>
-            <div class="d1" ><i class="bi bi-skype"></i></div>
-            <div class="d1" ><i class="bi bi-linkedin"></i></div>
+            <div class="d1"><i class="bi bi-twitter"></i></div>
+            <div class="d1"><i class="bi bi-facebook"></i></div>
+            <div class="d1"><i class="bi bi-instagram"></i></div>
+            <div class="d1"><i class="bi bi-skype"></i></div>
+            <div class="d1"><i class="bi bi-linkedin"></i></div>
 
 
 
         </div>
         <div class="f3">
             <p>© Copyright Delicious. All Rights Reserved</p>
-              <p>  Designed by <span> BootstrapMade </span></p>
+            <p> Designed by <span> BootstrapMade </span></p>
         </div>
 
 
