--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div><a href="">Menu</a></div>
             <div><a href="">Specials</a></div>
             <div><a href="#mmp">Events</a></div>
-            <div><a href="">Chefs</a></div>
+            <div><a href="#chefchef">Chefs</a></div>
             <div><a href="#gall3">Gallery</a></div>
             <div><a href="#contacttype">Contact</a></div>
             <div><button>Book a table</button></div>
@@ -439,7 +439,7 @@
     </div>
 
     <!-- CHeffs -->
-
+<div  id="chefchef">
     <div class="chefs py-5 cheffs">
         <h3 class="d-flex justify-content-center">Our Proffesional &nbsp;<div class="text-warning"> chefs</div>
         </h3>
@@ -521,7 +521,85 @@
             </div>
         </div>
     </div>
+</div>
+    <!-- Carousel -->
+    <div id="carouselExampleSlidesOnly " class="carousel slide carou" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active cars ">
+                <div>
+                    <img src="./public/img/testimonials/testimonials-1.jpg" class="d-block " alt="..." width="100px">
+                </div>
+                <div>
+                    <h2 class="text-white">Saul Goodman</h2>
+                </div>
+                <div>
+                    <p class="text-white">ceo & Founder</p>
+                </div>
+                <div class="text-warning">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
 
+                </div>
+                <div class="text-white">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore magnam eveniet at ipsa
+                        consequatur repellat dolorem sint. Sint, nisi.</p>
+                </div>
+
+
+            </div>
+            <div class="carousel-item cars">
+                <div>
+                <img src="./public/img/testimonials/testimonials-2.jpg" class="d-block " alt="..." width="100px"></div>
+                <div>
+                    <h2 class="text-white">Saul Goodman</h2>
+                </div>
+                <div>
+                    <p class="text-white">ceo & Founder</p>
+                </div>
+                <div class="text-warning">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+
+                </div>
+                <div class="text-white">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore magnam eveniet at ipsa
+                        consequatur repellat dolorem sint. Sint, nisi.</p>
+                </div>
+
+
+            </div>
+            <div class="carousel-item cars">
+                <div>
+                <img src="./public/img/testimonials/testimonials-3.jpg" class="d-block " alt="..." width="100px"></div>
+                <div>
+                    <h2 class="text-white">Saul Goodman</h2>
+                </div>
+                <div>
+                    <p class="text-white">ceo & Founder</p>
+                </div>
+                <div class="text-warning">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+
+                </div>
+                <div class="text-white">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore magnam eveniet at ipsa
+                        consequatur repellat dolorem sint. Sint, nisi.</p>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
 
 
 
