--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div><a href="#disdis">About</a></div>
             <div><a href="">Menu</a></div>
-            <div><a href="">Specials</a></div>
+            <div><a href="#SPEC1">Specials</a></div>
             <div><a href="#mmp">Events</a></div>
             <div><a href="#chefchef">Chefs</a></div>
             <div><a href="#gall3">Gallery</a></div>
@@ -191,8 +191,75 @@
 
     </div>
 
+   <!-- Specials -->
 
+   <DIV id="SPEC1">
+    <h2>Check our <span>Specials</span></h2>
+    <p class="p1">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+  <div class="d-flex align-items-start p-5">
+    <div class="nav flex-column nav-pills me-3 w-100 " id="v-pills-tab" role="tablist" aria-orientation="vertical">
+      <a class=" active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Modi sit est</a>
+      <a class="" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Unde praesentium sed</a>
+      <a class="" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Pariatur explicabo vel</a>
+      <a class=" " id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Nostrum qui quasi</a>
+    </div>
+    <div class="tab-content" id="v-pills-tabContent">
+      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+        <div class="d-flex">
+            <div>
+                <h3>Architecto ut aperiam autem id</h3>
+                <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka
 
+                    Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+            </div>
+            <div>
+                <img src="./public/img/specials-1.jpg" alt="" width="300px">
+            </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+        <div class="d-flex">
+            <div>
+                <h3>Architecto ut aperiam autem id</h3>
+                <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka
+
+                    Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+            </div>
+            <div>
+                <img src="./public/img/specials-2.jpg" alt="" width="300px">
+            </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+        <div class="d-flex">
+            <div>
+                <h3>Architecto ut aperiam autem id</h3>
+                <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka
+
+                    Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+            </div>
+            <div>
+                <img src="./public/img/specials-3.jpg" alt="" width="300px">
+            </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
+        <div class="d-flex">
+            <div>
+                <h3>Architecto ut aperiam autem id</h3>
+                <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka
+
+                    Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+            </div>
+            <div>
+                <img src="./public/img/specials-4.jpg" alt="" width="300px">
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</DIV>
+<BR></BR>
     <!-- Events -->
     <section id="mmp">
         <h2 class="text-white">Organize Your <span>Events </span>in our Restaurant</h2>
